<resources>
    <string name="app_name">UCI Parking</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">UCI Android Parking App</string>
    <string name="navigation_quotes">Quotes</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_samples">Samples</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_purchases">Purchase History</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to home -->
    <string name="home_location">Location</string>
    <string name="home_location_description">Description</string>
    <string name="home_location_address">Address</string>


    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_retype">Re-type Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_mismatch"> Mismatched password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="logout">Logout</string>
    <string name="action_register">Register</string>
    <string name="action_pass_reset">Reset password</string>

    <!-- Strings related to billing -->
    <string name="billing_info"> Billing</string>
    <string name="billing_card_info">Card Information</string>
    <string name="billing_add">Add Debit or Credit Card</string>
    <string name="billing_card_number">Credit/Debit Card Number</string>
    <string name="billing_card_expiration">Expiration Date</string>
    <string name="billing_card_expiration_month_hint">MM</string>
    <string name="billing_card_expiration_year_hint">YY</string>
    <string name="billing_card_cvv">Security Code</string>
    <string name="billing_card_cvv_hint">CVV</string>
    <string name="billing_card_zip">Zip Code</string>
    <string name="billing_card_zip_hint">Zip Code</string>
    <string name="billing_add_card">Add Card</string>
    <string name="billing_delete_card">Delete Card</string>
    <string name="billing_default">Default Card</string>

    <!-- Strings related to purchases -->
    <string name="purchase_history">Purchase History</string>
    <string name="purchase_amount">Amount</string>
    <string name="purchase_paid">Paid</string>
    <string name="purchase_location_date">Date</string>
    <string name="purchase_end_session">End Session</string>

</resources>

