<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_discuss"
            android:title="@string/billing_info" />
        <!--<item-->
            <!--android:id="@+id/nav_samples"-->
            <!--android:icon="@drawable/ic_forum"-->
            <!--android:title="@string/navigation_samples" />-->
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_done"
            android:title="@string/navigation_purchases" />

        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/navigation_settings" />-->

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/logout" />
    </group>

    <!--<item android:title="@string/navigation_sub_items">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:icon="@drawable/ic_dashboard"-->
                <!--android:title="@string/navigation_dummy_item_1" />-->
            <!--<item-->
                <!--android:icon="@drawable/ic_dashboard"-->
                <!--android:title="@string/navigation_dummy_item_2" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
