<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/include_toolbar" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/billing_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="24dp"
                    android:visibility="gone">

                    <TextView
                        android:text="@string/billing_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_margin"
                        android:textColor="@color/primary_text"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_margin"
                        android:layout_marginRight="@dimen/card_margin">

                        <LinearLayout
                            style="@style/Widget.CardContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1">
                            <TextView
                                android:id="@+id/billing_card_number_label"
                                android:text="@string/billing_card_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"/>

                            <EditText
                                android:id="@+id/billing_card_number"
                                android:layout_width="324dp"
                                android:layout_height="wrap_content"
                                android:ems="10" />
                            <TextView
                                android:id="@+id/billing_card_expiration_label"
                                android:text="@string/billing_card_expiration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"/>

                            <EditText
                                android:id="@+id/billing_card_expiration_month"
                                android:layout_width="42dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/billing_card_expiration_month_hint"
                                android:layout_gravity="start"/>
                            <EditText
                                android:id="@+id/billing_card_expiration_year"
                                android:layout_width="42dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/billing_card_expiration_year_hint" />
                            <TextView
                                android:id="@+id/billing_card_cvv_label"
                                android:text="@string/billing_card_cvv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"/>

                            <EditText
                                android:id="@+id/billing_card_cvv"
                                android:layout_width="324dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/billing_card_cvv_hint"/>

                            <TextView
                                android:id="@+id/billing_card_zip_label"
                                android:text="@string/billing_card_zip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/primary_text"/>

                            <EditText
                                android:id="@+id/billing_card_zip"
                                android:layout_width="324dp"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/billing_card_zip_hint"/>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <Button
                        android:text="@string/billing_add_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/billing_add_submit"
                        android:layout_gravity="end"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/billing_info"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/billing_card_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_margin"
                        android:layout_marginStart="@dimen/card_margin"
                        android:textColor="@color/primary_text"
                        android:textStyle="normal|bold"
                        android:textSize="18sp" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_margin"
                        android:layout_marginRight="@dimen/card_margin">

                        <RelativeLayout
                            style="@style/Widget.CardContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1">
                            <TextView
                                android:id="@+id/billing_card_brand_display"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="normal|bold"
                                android:textSize="18sp" />
                            <TextView
                                android:id="@+id/billing_card_last_four_display"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@+id/billing_card_brand_display"
                                android:layout_toRightOf="@+id/billing_card_brand_display"
                                android:layout_marginStart="8dp"
                                android:layout_marginLeft="8dp"
                                android:textStyle="normal|bold"
                                android:textSize="18sp" />
                            <TextView
                                android:id="@+id/billing_card_expiration_display"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="normal|bold"
                                android:textSize="18sp"
                                android:layout_below="@+id/billing_card_brand_display"/>

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                    <Button
                        android:text="@string/billing_delete_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/billing_delete_submit"
                        android:layout_gravity="end"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <include layout="@layout/include_navigation" />

</android.support.v4.widget.DrawerLayout>