<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/purchase_location_name"
            android:text="@string/home_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="normal|bold"
            android:textColor="@color/primary_text"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/purchase_location_amount"
            android:text="@string/purchase_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="normal|bold"
            android:textColor="@color/primary_text"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="15sp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/purchase_location_date"
            android:text="@string/purchase_location_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="15sp"
            android:layout_weight="1"
            android:gravity="left"/>

        <TextView
            android:id="@+id/purchase_location_paid"
            android:text="@string/purchase_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="normal|bold"
            android:textColor="@color/primary_text"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="15sp"/>
    </LinearLayout>


</LinearLayout>